# gearsvk

./: .clang-format  .gitignore  .gitmodules  .travis.yml  BuildDebug.bat  BuildDebug.sh  BuildDev.sh  BuildRel.bat  BuildRelease.bat  BuildRelease.sh  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CopyGearsDLL.bat  HAZI_OLVASSEL.md  README.md  StartGearsPy.bat  StartGearsPyTest.bat  compileShaders.bat  conanProfileTravis  conanfile.txt  hist.plt  requirements.txt  seq.txt
cmake/: Utils.cmake  (+1 more)
src/GearsPYD/: CMakeLists.txt  Gears.cpp  GearsAPI.hpp  GearsAPIv2.cpp  GearsAPIv2.hpp  GearsModule.cpp  GearsModuleCommon.hpp  GearsModuleEmbedded.cpp  SequenceAdapter.cpp  SequenceAdapter.hpp  StimulusAdapter.cpp  StimulusAdapter.hpp  StimulusAdapterForPresentable.cpp  StimulusAdapterForPresentable.hpp  StimulusAdapterView.cpp  StimulusAdapterView.hpp
src/GearsPYD/Sources/: GearsAPIv2.cpp  GearsModuleEmbedded.cpp  LogInitializer.cpp  SequenceAdapter.cpp  StimulusAdapter.cpp  StimulusAdapterView.cpp
src/GearsPYD/core/: Pass.cpp  Pass.h  PassRenderer.cpp  PassRenderer.h  PortHandler.h  PythonDict.h  Response.h  Sequence.cpp  Sequence.h  SequenceRenderer.cpp  SequenceRenderer.h  ShaderManager.cpp  ShaderManager.h  Stimulus.cpp  Stimulus.h  StimulusRenderer.cpp  StimulusRenderer.h  StimulusWindow.h  TextureManager.h
src/GearsPYD/event/: Base.h  Frame.h  KeyPressed.h  MouseReleasedLeft.h  events.cpp
src/GearsPYD/font/: FontManager.cpp  TexFont.h
src/GearsPYD/gpu/: Nothing.cpp  Quad.hpp  Shader.cpp  Shader.hpp  TextureQueue.cpp  TextureQueue.hpp
src/GearsTest/: CMakeLists.txt  PrecompiledHeader.hpp
src/GearsTest/Sources/: LogInitializer.cpp  TestEnvironment.hpp
src/GearsVk/: CMakeLists.txt  CallEvery.hpp  Font.cpp  Font.hpp  GLFWWindow.cpp  GLFWWindow.hpp  GearsVkAPI.hpp  InputState.hpp  Persistent.cpp  Persistent.hpp  Ptr.hpp  SDF.cpp  SDF.hpp  SDLWindow.cpp  SDLWindowProvider.cpp  SDLWindowProvider.hpp  ShaderPipeline.hpp  ShaderReflection.cpp  ShaderReflection.hpp  ShaderSourceBuilder.hpp  SpdlogInitializer.cpp  UniformBlock.hpp  UniformView.cpp  UniformView.hpp  VulkanEnvironment.cpp  VulkanEnvironment.hpp  VulkanMemoryAllocatorImpl.cpp  WindowBase.hpp  glmlib.hpp  main.cpp
src/GearsVk/Camera/: Camera.cpp  Camera.hpp  CameraControl.hpp  Frustum.cpp  Frustum.hpp
src/GearsVk/RenderGraph/: CompileResultProvider.hpp  Connections.hpp  DrawRecordable.hpp  GraphInfo.hpp  GraphRenderer.cpp  GraphRenderer.hpp  GraphSettings.cpp  GraphSettings.hpp  InputBindable.hpp  Node.hpp  Operation.cpp  Operation.hpp  RenderGraph.cpp  RenderGraph.hpp  RenderGraphCompileResult.hpp  RenderGraphUniformReflection.cpp  RenderGraphUniformReflection.hpp  Resource.cpp  Resource.hpp  ShaderPipeline.cpp  ShaderPipeline.hpp  UniformReflection.cpp  UniformReflection.hpp
src/GearsVk/Sources/: Font.cpp  PCH.hpp  SpdlogInitializer.cpp  UniformView.cpp  VulkanEnvironment.cpp  VulkanMemoryAllocatorImpl.cpp
src/GearsVk/Utils/: Assert.cpp  Assert.hpp  CompilerDefinitions.hpp  Logger.cpp  Logger.hpp  MessageBox.cpp  MessageBox.hpp  MultithreadedFunction.hpp  Noncopyable.hpp  Observable.hpp  Persistent.hpp  Ptr.hpp  SourceLocation.hpp  Time.cpp  Time.hpp  UUID.cpp  UUID.hpp  Utils.hpp
src/GearsVk/VulkanWrapper/: Allocator.cpp  Allocator.hpp  Buffer.cpp  Buffer.hpp  CommandBuffer.cpp  CommandBuffer.hpp  CommandPool.hpp  DebugUtilsMessenger.cpp  DebugUtilsMessenger.hpp  DescriptorPool.hpp  DescriptorSet.hpp  DescriptorSetLayout.hpp  Device.cpp  Device.hpp  DeviceExtra.hpp  DeviceMemory.cpp  DeviceMemory.hpp  Fence.cpp  Fence.hpp  Framebuffer.cpp  Framebuffer.hpp  Image.cpp  Image.hpp  ImageLayoutObserver.hpp  ImageView.hpp  Instance.cpp  Instance.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp  Pipeline.cpp  Pipeline.hpp  PipelineLayout.hpp  Queue.cpp  Queue.hpp  RenderPass.hpp  ResourceLimits.hpp  Sampler.cpp  Sampler.hpp  Semaphore.hpp  ShaderModule.cpp  (+12 more)
src/GearsVk/Window/: GLFWWindow.cpp  GLFWWindow.hpp  SDLWindow.cpp  SDLWindow.hpp  Window.hpp  WindowBase.hpp
src/PySequence/: CMakeLists.txt
src/RenderGraph/: CMakeLists.txt
src/RenderGraph/Sources/: BufferView.cpp  ComputeShaderPipeline.cpp  Font.cpp  GraphRenderer.cpp  GraphSettings.cpp  LogInitializer.cpp  Operation.cpp  PCH.hpp  RenderGraph.cpp  RenderGraphPass.cpp  Resource.cpp  ShaderPipeline.cpp  ShaderReflectionToAttachment.cpp  ShaderReflectionToDescriptor.cpp  ShaderReflectionToVertexAttribute.cpp  UniformReflection.cpp  UniformView.cpp  VulkanEnvironment.cpp
src/RenderGraphTest/: CMakeLists.txt
src/Sequence/: CMakeLists.txt
src/SequenceRunner/: CMakeLists.txt  SequenceRunner.cpp
src/Tests/: CMakeLists.txt  FontRenderingTests.cpp  GearsTests.cpp  GoogleTestEnvironment.cpp  GoogleTestEnvironment.hpp  RenderGraphTests.cpp  TestMain.cpp  VizHFTests.cpp  VulkanTestEnvironment.cpp  VulkanTestEnvironment.hpp
src/Utils/: Assert.cpp  Assert.hpp  BuildType.hpp  CMakeLists.txt  Cache.hpp  CommandLineFlag.cpp  CommandLineFlag.hpp  CompilerDefinitions.hpp  Dummy.hpp  Event.hpp  ImageLoader.cpp  ImageLoader.hpp  Lazy.hpp  Logger.cpp  Logger.hpp  MessageBox.cpp  MessageBox.hpp  MovablePtr.hpp  Noncopyable.hpp  Persistent.hpp  PrecompiledHeader.hpp  Ptr.hpp  Singleton.hpp  SourceLocation.cpp  SourceLocation.hpp  StaticInit.hpp  TerminalColors.hpp  Time.cpp  Time.hpp  Timer.hpp  UUID.cpp  UUID.hpp  Utils.cpp  Utils.hpp  UtilsDLLExport.hpp
src/VulkanWrapper/: Buffer.hpp  BufferTransferable.cpp  CMakeLists.txt  CommandBuffer.hpp  CommandPool.hpp  DebugUtilsMessenger.cpp  DebugUtilsMessenger.hpp  DescriptorPool.hpp  DescriptorSet.hpp  DescriptorSetLayout.hpp  Device.hpp  DeviceExtra.hpp  DeviceHolder.hpp  DeviceMemory.hpp  Fence.hpp  Framebuffer.hpp  Image.hpp  ImageView.hpp  Instance.hpp  MemoryMapping.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp  Pipeline.hpp  PipelineLayout.hpp  Queue.hpp  RenderPass.hpp  ResourceLimits.hpp  Sampler.hpp  Semaphore.hpp  ShaderModule.cpp  ShaderModule.hpp  ShaderPipeline.hpp  SingleTimeCommand.hpp  Surface.hpp  Swapchain.cpp  Swapchain.hpp  VulkanUtils.cpp  VulkanUtils.hpp  VulkanWrapper.hpp  WindowProvider.hpp
(+1792 files in other folders)
